# htcw_bits

./: .piopm  CMakeLists.txt  README.md  htcw_bits.h  htcw_bits.hpp  htcw_endian.h  idf_component.yml  library.json  library.properties
include/: htcw_bits.hpp  htcw_endian.hpp
zephyr/: CMakeLists.txt  Kconfig  module.yml
